no page visibilty stops dogs from spawning but adding a playstate class does not pause them

--- a/src/components/Dog/Dog.css
+++ b/src/components/Dog/Dog.css
@@ -31,6 +31,9 @@
   animation-delay: 10s
 }
 
+.notVisible {
+  animation-play-state: paused 
+}
 
 
 @keyframes slidein {
